Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@
 trigger:
   branches:
     include:
-    - '*'  # must quote since "*" is a YAML reserved character; we want a string
+    - 'filter-push-down-to-lookup-source'  # must quote since "*" is a YAML reserved character; we want a string
 
 resources:
   containers:
